# rl-drone-hoops

./: .gitignore  README.md  hoopsctl.py  pyproject.toml  requirements-train.txt  requirements.txt
config/: README.md  default.yaml  fast-train.yaml  performance.yaml
docs/: AGENT_CONTEXT.md  ISAAC_GYM_REWRITE.md  MJX_MIGRATION.md  SYSTEM.md
models/: .gitkeep  best_model.json
rl_drone_hoops/: __init__.py  config.py  constants.py
rl_drone_hoops.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
rl_drone_hoops/assets/: isaac_gym_assets.py
rl_drone_hoops/envs/: __init__.py  isaac_drone_physics.py  isaac_gym_env.py  isaac_gymnasium_env.py  isaac_sensors.py  mjx_drone_hoops_env.py  mjx_gymnasium_wrapper.py  mjx_vec_adapter.py  mujoco_drone_hoops_env.py
rl_drone_hoops/mujoco_assets/: drone_hoops.xml  xml_builder.py
rl_drone_hoops/rl/: __init__.py  distributions.py  model.py  ppo_recurrent.py  vec.py
rl_drone_hoops/utils/: best_model_tracker.py  checkpoint.py  jax_torch_bridge.py  math3d.py  timed_buffer.py  video_overlay.py
scripts/: eval_checkpoint.py  generate_calibration_videos.py  smoke_env.py  train_recurrent_ppo.py
tests/: __init__.py  test_env.py  test_isaac_env.py  test_isaac_physics.py  test_jax_torch_bridge.py  test_math3d.py  test_mjx_env.py  test_reward.py
